Better logging and handling of previous platform cert validation (#149)
* Update Powershell json escaping

* Greater flexibility in hash algorithm for PreviousPlatformCerts

* Checking collection sizes in more places

* Work on holder matching with previous platform certs

* Added more logging

* Delimiter handling in VPD

* Fix some assumed hash choices

* Reject empty glob results in validate's prev-pcert

* Small clean up

* Support another method to specify PKC subject